--- a/stylesheets/indexStyle.css
+++ b/stylesheets/indexStyle.css
@@ -27,6 +27,45 @@
   --alignCenter: center;
 }
 
+@keyframes load {
+  0%   {background-color: #21243B;}
+  50%  {background-color: #104661;}
+  100% {background-color: var(--background);}
+}
+
+@keyframes flicker {
+  0%   {background-color: #21243B;}
+  25%  {background-color: #21243B;}
+  50%  {background-color: var(--hover);}
+  75%  {background-color: #544616;}
+  100% {background-color: var(--hover);}
+}
+
+#ptr{
+  animation-name: flicker;
+  animation-duration: 3s;
+}
+
+#apples{
+  animation-name: flicker;
+  animation-duration: 3s;
+}
+
+#healthful{
+  animation-name: flicker;
+  animation-duration: 2s;
+}
+
+#ethicsviz{
+  animation-name: flicker;
+  animation-duration: 1.6s;
+}
+
+#groupme{
+  animation-name: flicker;
+  animation-duration: 1s;
+}
+
 body{
   display: var(--displayTitle);
   position: var(--positionRelative);
@@ -38,6 +77,8 @@ body{
   margin-right: 0%;
   margin-left: 0%;
   margin-bottom: 0%;
+  animation-name: load;
+  animation-duration: 4s;
 }
 
 
