--- a/stylesheets/indexStyle.css
+++ b/stylesheets/indexStyle.css
@@ -28,46 +28,8 @@
   --alignCenter: center;
 }
 
-@keyframes load {
-  0%   {background-color: #21243B;}
-  50%  {background-color: #104661;}
-  100% {background-color: var(--background);}
-}
-
-@keyframes flicker {
-  0%   {background-color: #21243B;}
-  50%  {background-color: var(--hover);}
-  75%  {background-color: #544616;}
-  100% {background-color: var(--hover);}
-}
-
-#ptr{
-  animation-name: flicker;
-  animation-duration: 2s;
-}
-
-#apples{
-  animation-name: flicker;
-  animation-duration: 2.5s;
-}
-
-#healthful{
-  animation-name: flicker;
-  animation-duration: 2.1s;
-}
-
-#ethicsviz{
-  animation-name: flicker;
-  animation-duration: 1.5s;
-}
-
-#groupme{
-  animation-name: flicker;
-  animation-duration: 1s;
-}
-
 body{
-  display: var(--displayTitle);
+  display: var(--displayBlock);
   position: var(--positionRelative);
   width: var(--widthFull);
   height: var(--heightAuto);
@@ -77,13 +39,12 @@ body{
   margin-right: 0%;
   margin-left: 0%;
   margin-bottom: 0%;
-  animation-name: load;
-  animation-duration: 4s;
+
 }
 
 
 .base{
-  display: var(--displayTitle);
+  display: var(--displayBlock);
   position: var(--positionRelative);
   background-color: none;
   align-title: center;
@@ -91,13 +52,12 @@ body{
 }
 
 .title{
-  display: var(--displayTitle);
+  display: var(--displayBlock);
   position: var(--positionRelative);
   width: var(--widthFull);
   height: var(--heightAuto);
   text-align: center;
-  width: 30%;
-  float: left;
+  width: 1000%;
   background-color: var(--about);
   color: var(--base);
   font-size: 200%;
@@ -105,18 +65,16 @@ body{
 }
 
 .about{
-  display: var(--displayTitle);
+  display: var(--displayBlock);
   position: var(--positionRelative);
   width: var(--widthFull);
   height: var(--heightAuto);
   text-align: center;
-  width: 30%;
-  float: left;
+  width: 100%;
   background-color: var(--about);
   color: white;
   margin-top: -1%;
   padding-top: 1%;
-  box-shadow: 5px 5px var(--projects);
   font-size: 130%;
   font-family: var(--bodyont);
 }
@@ -136,30 +94,23 @@ body{
 }
 
 .container{
-  width: 69%;
+  width: 100%;
   height: var(--heightAuto);
-  float: left;
-  display: var(--displayTitle);
+  display: var(--displayBlock);
   background-color: var(--projects);
   text-align: center;
   margin-top: 1%;
   font-size: 200%;
-  box-shadow: 5px 5px black;
   font-family: var(--titleFont);
   color: var(--about);
 }
 
 .projects{
-  width: 68.9%;
+  width: 100%;
   height: var(--heightAuto);
-  float: left;
-  display: var(--displayTitle);
+  display: var(--displayBlock);
   background-color: var(--projects);
   text-align: center;
-  box-shadow: 5px 5px var(--about);
-  border-top: solid 1px var(--projects);
-  border-left: solid 1px var(--projects);
-
 }
 
 .projects .project{
