--- a/stylesheets/indexStyle.css
+++ b/stylesheets/indexStyle.css
@@ -206,3 +206,32 @@ body{
 .external:hover{
   color: black;
 }
+
+#green{
+  z-index: 1;
+  position: absolute;
+  -webkit-animation:spin 1s linear infinite;
+  -moz-animation:spin 1s linear infinite;
+  animation:spin 1s linear infinite;
+}
+
+#purple{
+  z-index: 2;
+  position: absolute;
+  -webkit-animation:spin 60s linear infinite;
+  -moz-animation:spin 60s linear infinite;
+  animation:spin 60s linear infinite;
+}
+
+.images{
+    justify-content: var(--alignCenter);
+    width: 45%;
+    margin-left: -23%;
+    margin-top: 15%;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+}
