--- a/stylesheets/indexStyle.css
+++ b/stylesheets/indexStyle.css
@@ -1,245 +1,96 @@
 :root{
 
-  /*Fonts*/
-  --otherfont: 'Antic Slab', serif;
-  --titleWeight: normal;
-  --bodyFont:  'Merriweather', serif;
-  --extrafont: 'Comfortaa', cursive;
-  --titleFont: 'Bree Serif', serif;
-
-  /*Colors*/
-  --background: #1A73A1;
-  --base: #EFF8FF;
-  --hover: #D4AF37;
-  --body: #A29F9B;
-  --about: #0d0d0e;
-  --projects: #e4e5e2;
-  --item: #DBC47B;
-  --link: #DBC47B;
-  --pLink: #787C80;
-  /*Display Constants*/
-  --displayBlock: block;
-  --displayTitle: inline-block;
-  --positionRelative: relative;
-  --noDeco: none;
-  --widthFull: 100%;
-  --widthDesktop: 50%;
-  --heightAuto: auto;
-  --heightFull: 100%;
-  --alignCenter: center;
 }
 
 body{
-  display: var(--displayBlock);
-  position: var(--positionRelative);
-  width: var(--widthFull);
-  height: 100%;
-  background-color: none;
-  align-title: center;
-  margin-top: 0%;
-  margin-right: 0%;
-  margin-left: 0%;
-  margin-bottom: 0%;
-
+  width: 98%;
+  padding: 0%;
+  text-align: center;
+  background-color: black;
 }
 
 .about{
-  display: var(--displayBlock);
-  position: var(--positionRelative);
-  width: var(--widthFull);
-  height: var(--heightAuto);
   text-align: center;
-  background-color: var(--about);
-  color: white;
-  margin-top: 0%;
-  margin-right: 0%;
-  margin-left: 0%;
-  padding-bottom: 1%;
-  font-size: 130%;
-  font-family: var(--bodyFont);
-}
-
-.about a{
-  text-decoration: none;
-  color: var(--link);
-  text-shadow: 1px 1px black;
-  font-family: var(--titleFont);
-  font-size: 200%;
-  padding: 1%;
-  font-weight: bold;
-}
-
-.about a:hover{
-  color: var(--hover);
-}
-
-.columns{
-  display: flex;
-  padding-left: 20%;
-  padding-right: 20%;
-}
-
-.columns li{
-  font-size: 205%;
-    color: var(--hover);
-}
-
-#accom{
-  flex:left;
-  padding-right: 10%;
-}
-
-#tools{
-  flex: right;
-  padding-left: 10%;
+  padding-bottom: 15%;
 }
 
 #title{
-  font-size: 500%;
-  padding: .1%;
-}
-
-#bio{
-    font-size: 275%;
-}
-#secondary{
   font-size: 250%;
+  color: white;
 }
 
-#tertiary{
-  font-size: 205%;
-  color: var(--hover);
-}
-
-.projects{
-  width: 100%;
-  height: var(--heightFull);
-  display: var(--displayBlock);
-  position: var(--positionRelative);
-  margin-right: 0%;
-  margin-left: 0%;
-  background-color: var(--projects);
-  text-align: center;
-}
-
-.projects .project{
-  display: var(--displayTitle);
-  position: var(--positionRelative);
-  width: 24%;
-  height: 200%;
-  background-color: var(--item);
-  margin: 0%;
-  text-align: center;
-  margin-bottom: 5%;
-}
-
-.projects p{
-  margin: 3%;
-}
-
-#ux{
-  font-size: 250%;
-}
-
-#dv{
-  font-size: 250%;
-}
-
-.projects .project:hover{
-  background-color: var(--hover);
-}
-
-.projects .project:hover a{
-  color: black;
-}
-
-.projects .project a{
-  display: var(--displayBlock);
-  text-decoration: none;
-  height: 100%;
-  color: var(--pLink);
-  font-family: var(--bodyFont);
-  font-size: 200%;
-  padding-top: 25%;
-}
-
-#projectTitle{
-  font-size: 300%;
-  color: var(--link);
-}
-
-#projectTitle:hover{
-  color: var(--hover);
-}
-
-.description{
-  padding: 2.5%;
-  text-align: center;
+#location{
   font-size: 150%;
-  font-family: var(--bodyFont);
+  color: white;
 }
 
-.description p{
-  font-size: 80%;
+.project{
+  text-align: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: grey;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
-.ptrdesktop{
-  width: 100%;
-
+.project a{
+  text-decoration: underline;
+  font-weight: bold;
+  color: khaki;
+  font-size: 200%;
 }
 
-.ptrdesktop_inline{
-  display: var(--displayTitle);
-  width: 49%;
-  height: 50%;
-}
-
-.ptrdesktop:hover{
-
-}
-
-.external{
-  color: var(--hover);
+.project p{
   text-decoration: none;
+  font-weight: bold;
+  color: white;
+  font-size: 150%;
 }
 
-.external:hover{
-  color: black;
+.social{
+  text-align: center;
+  margin-top: 10%;
 }
 
-#green{
-  z-index: 1;
-  position: absolute;
-  -webkit-animation:spin 1s linear infinite;
-  -moz-animation:spin 1s linear infinite;
-  animation:spin 1s linear infinite;
+.social a{
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  padding: 10%;
+  font-size: 125%;
 }
 
-#purple{
-  z-index: 2;
-  position: absolute;
-  -webkit-animation:spin 60s linear infinite;
-  -moz-animation:spin 60s linear infinite;
-  animation:spin 60s linear infinite;
+.project_filter{
+  text-align: right;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: grey;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
-.paused{
-    -webkit-animation-play-state:paused;
-    -moz-animation-play-state:paused;
-    -o-animation-play-state:paused;
-    animation-play-state:paused;
-
-.images{
-    justify-content: var(--alignCenter);
-    width: 45%;
-    margin-left: -23%;
-    margin-top: 15%;
-
+.project_filter a{
+  text-decoration: underline;
+  font-weight: bold;
+  color: khaki;
+  font-size: 200%;
 }
 
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+.project_filter img{
+  width: 10%;
+  height: auto;
+}
+
+
 
 
 
